Made Login Page work

--- a/src/ApplicationResources.properties
+++ b/src/ApplicationResources.properties
@@ -40,4 +40,6 @@ sujsun-cms.url.service.account.path				= 		/account
 
 sujsun-cms.url.service.contact.path				= 		/contact
 
+sujsun-cms.url.service.authenticate.path		= 		/authenticate
+
 #######################################
