--- a/war/WEB-INF/logging.properties
+++ b/war/WEB-INF/logging.properties
@@ -10,4 +10,8 @@
 #
 
 # Set the default logging level for all loggers to WARNING
-.level = WARNING
+.level = INFO
+
+# Set level for your app
+oed.server.level = INFO
+oed.server.data.datastore.myInjector.level = FINEST
