--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Spring-4.1.3-Finease"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine (3)"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org-apache-commons-lang.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
